fix spacing a bit

--- a/css/inner/builds.less
+++ b/css/inner/builds.less
@@ -91,12 +91,10 @@ tbody.build-row {
   }
   .commit-log {
     padding-top: 1%;
-    margin-top: 1%;
     border-top: 1px solid #D7DCE3;
   }
   .artifacts {
     padding-top: 1%;
-    margin-top: 3%;
     border-top: 1px solid #D7DCE3;
   }
 }
